--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,7 @@ margin: 40px 0 40px 40px;
 #list_container{
   margin: 40px 0 40px 40px ;
   font-size: 20px;
+  line-height: 1.5;
 }
 
 #about #logo{
@@ -62,7 +63,7 @@ margin: 40px 0 40px 40px;
   text-align: center;
   font-size: 28px;
   color:#0275d8;
-  
+
 }
 
 #about #content{
@@ -72,4 +73,27 @@ margin: 40px 0 40px 40px;
 
 #about #logo{
 margin: 80px 0;
+}
+
+#t01, #t02 {
+  width: 50%;
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+  table-layout: fixed;
+  margin: 40px;
+}
+
+#t03 {
+  border: 0px solid black;
+  border-spacing: 1px;
+  margin: 0 40px;
+}
+
+th, td {
+  border: 1px solid black;
+  border-collapse: separate;
+  padding: 2px;
+  height: 24px;
+  min-width: 26px;
 }
