--- a/css/index.css
+++ b/css/index.css
@@ -89,13 +89,13 @@ margin: 80px 0;
   border-collapse: collapse;
   text-align: center;
   table-layout: fixed;
-  margin: 40px;
+  margin: 40px 40px 40px 0;
 }
 
 #t03 {
   border: 0px solid black;
   border-spacing: 1px;
-  margin: 0 40px;
+  margin: 40px 40px 40px 0;
 }
 
 th, td {
@@ -119,9 +119,12 @@ th, td {
 
 #tag_table{
   border-collapse: collapse;
-  margin: 40px;
 }
 
 #tag_table_tr{
   background-color:#d3d3d3;
+}
+.html-width{
+  max-width: 768px;
+  margin: 40px;
 }
