--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body{
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
-  color: #555;
+  color: #555555;
 }
 
 header{
@@ -18,15 +18,19 @@ header{
 
 h1{
   font-size: 40px;
-  color: #0275d8;
+  color: #007bff;
 }
 
 a{
-  color:#0275d8;
+  color:#007bff;
 }
 
 a:visited{
-  color:#43457F;
+  color:#541BC4;
+}
+
+a:hover{
+  color:#0056b3;
 }
 
 nav a {
@@ -34,7 +38,7 @@ nav a {
 }
 
 .blue{
-  color: #0275d8;
+  color: #007bff;
   font-size: 28px;
 }
 #top_container{
@@ -70,7 +74,6 @@ nav a {
   text-align: center;
   font-size: 28px;
   color:#0275d8;
-
 }
 
 #about #content{
@@ -79,52 +82,5 @@ nav a {
 }
 
 #about #logo{
-
 margin: 80px 0;
-}
-
-#t01, #t02 {
-  width: 50%;
-  border: 1px solid black;
-  border-collapse: collapse;
-  text-align: center;
-  table-layout: fixed;
-  margin: 40px 40px 40px 0;
-}
-
-#t03 {
-  border: 0px solid black;
-  border-spacing: 1px;
-  margin: 40px 40px 40px 0;
-}
-
-th, td {
-  border: 1px solid black;
-  border-collapse: separate;
-  padding: 2px;
-  height: 24px;
-  min-width: 26px;
-}
-
-#home:link, #home:visited {
-  background-color: #0275d8;
-  color: white;
-  padding: 10px 20px;
-  margin: 40px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  opacity: 0.7;
-}
-
-#tag_table{
-  border-collapse: collapse;
-}
-
-#tag_table_tr{
-  background-color:#d3d3d3;
-}
-.html-width{
-  max-width: 768px;
-  margin: 40px;
 }
