--- a/css/index.css
+++ b/css/index.css
@@ -1,86 +1,83 @@
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
-  color: #555555;
+  color: #555;
 }
 
-header{
-  text-align: right;
+header {
   padding-bottom: 5px;
+  text-align: right;
   border-bottom: 1px solid #d3d3d3;
 }
 
-#logo{
+#logo {
   float: right;
   margin: 12px 40px;
-
 }
 
-h1{
+h1 {
   font-size: 40px;
   color: #007bff;
 }
 
-a{
-  color:#007bff;
+a:link {
+  color: #007bff;
 }
 
-a:visited{
-  color:#541BC4;
+a:visited {
+  color: #541BC4;
 }
 
-a:hover{
-  color:#0056b3;
+a:hover {
+  color: #0056b3;
 }
 
 nav a {
   text-decoration: none;
 }
 
-.blue{
-  color: #007bff;
+.color {
   font-size: 28px;
+  color: #007bff;
 }
-#top_container{
+
+#top_container {
   margin: 40px 0 40px 40px;
 }
 
-#info_container{
+#info_container {
   font-size: 20px;
 }
 
-#marquee_container{
+#mid_container {
   padding: 40px 0;
-  margin: 0 40px ;
-  text-align: center;
+  margin: 0 40px;
   font-size: 24px;
+  text-align: center;
   border-top: 1px solid #d3d3d3;
   border-bottom: 1px solid #d3d3d3;
 }
 
-#list_container{
+#list_container {
   margin: 40px 0 40px 40px ;
   font-size: 20px;
   line-height: 1.5;
 }
 
-#about #logo{
-  float:none;
+#about #logo {
   display: block;
+  float: none;
+  margin: 80px 0;
   text-align: center;
 }
 
-#about h3{
-  text-align: center;
+#about h3 {
   font-size: 28px;
-  color:#0275d8;
+  color: #0275d8;
+  text-align: center;
 }
 
-#about #content{
-  margin: auto ;
-  max-width:768px;
-}
-
-#about #logo{
-margin: 80px 0;
+#about #content {
+  margin: auto;
+  max-width: 768px;
 }
