--- a/make_a_deal/make_a_deal.css
+++ b/make_a_deal/make_a_deal.css
@@ -1,25 +1,31 @@
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
-  color: #555555;
+  color: #555;
 }
 
-header{
-  text-align: right;
+header {
   padding-bottom: 5px;
+  text-align: right;
   border-bottom: 1px solid #d3d3d3;
 }
 
-a{
-  color:#007bff;
+.html-wd {
+  margin:40px auto;
+  max-width: 768px;
+  text-align: center;
 }
 
-a:visited{
-  color:#541BC4;
+a:link {
+  color: #007bff;
 }
 
-a:hover{
-  color:#0056b3;
+a:visited {
+  color: #541BC4;
+}
+
+a:hover {
+  color: #0056b3;
 }
 
 nav a {
@@ -27,36 +33,30 @@ nav a {
 }
 
 #home-btn:link, #home-btn:visited {
-  background-color: #007bff;
-  color: white;
+  display: inline-block;
   padding: 10px 20px;
   margin: 0 40px;
-  text-align: center;
+  color: #fff;
   text-decoration: none;
-  display: inline-block;
-  opacity: 0.85;
+  text-align: center;
+  background-color: #007bff;
+  opacity: .85;
 }
 
 #home-btn:hover {
   background-color: #0056b3;
 }
 
-iframe{
+iframe {
   margin: 40px;
   border: none;
 }
 
-.html-wd{
-  margin:40px auto;
-  max-width: 768px;
-  text-align: center;
-}
-
-.block-mr{
+.block-mr {
   display: inline-block;
   margin: 0 40px;
 }
 
-section{
+section {
   margin: 40px;
 }
