--- a/recursive_color/recursive_color.css
+++ b/recursive_color/recursive_color.css
@@ -1,64 +1,67 @@
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
-  color: #555555;
+  color: #555;
 }
 
-header{
-  text-align: right;
+header {
   padding-bottom: 5px;
+  text-align: right;
   border-bottom: 1px solid #d3d3d3;
 }
 
-a{
-  color:#007bff;
+a:link {
+  color: #007bff;
 }
 
-a:visited{
-  color:#541BC4;
+a:visited {
+  color: #541BC4;
 }
 
-a:hover{
-  color:#0056b3;
+a:hover {
+  color: #0056b3;
 }
 
 nav a {
   text-decoration: none;
 }
 
-#recursive{
-  background-color: #eeeeee;
+#recursive {
   padding: 40px;
+  background-color: #eee;
 }
 
 .level1 {
-    padding: 8px;
-    background-color: #FF0000;
+  padding: 8px;
+  background-color: #f00;
 }
+
 .level2 {
-    padding: 8px;
-    background-color: #0000FF;
+  padding: 8px;
+  background-color: #00f;
 }
+
 .level3 {
-    padding: 8px;
-    background-color: #00FF00;
+  padding: 8px;
+  background-color: #0f0;
 }
+
 #inner {
-    padding: 8px;
-    margin: 10px 50px;
-    border: 1px dashed #000;
-    background-color: #DDD;
+  padding: 8px;
+  margin: 10px 50px;
+  background-color: #ddd;
+  border: 1px dashed #000;
 }
 
 #home-btn:link, #home-btn:visited {
-  background-color: #007bff;
-  color: white;
+  display: inline-block;
   padding: 10px 20px;
   margin: 40px;
-  text-align: center;
+  color: #fff;
   text-decoration: none;
-  display: inline-block;
-  opacity: 0.85;
+  text-align: center;
+  background-color: #007bff;
+  opacity: .85;
 }
 
 #home-btn:hover {
