--- a/tag/tag.css
+++ b/tag/tag.css
@@ -1,25 +1,30 @@
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
-  color: #555555;
+  color: #555;
 }
 
-header{
-  text-align: right;
+header {
   padding-bottom: 5px;
+  text-align: right;
   border-bottom: 1px solid #d3d3d3;
 }
 
-a{
-  color:#007bff;
+.html-width {
+  max-width: 768px;
+  margin: 40px;
 }
 
-a:visited{
-  color:#541BC4;
+a:link {
+  color: #007bff;
 }
 
-a:hover{
-  color:#0056b3;
+a:visited {
+  color: #541BC4;
+}
+
+a:hover {
+  color: #0056b3;
 }
 
 nav a {
@@ -27,37 +32,32 @@ nav a {
 }
 
 #home-btn:link, #home-btn:visited {
-  background-color: #007bff;
-  color: white;
+  display: inline-block;
   padding: 10px 20px;
   margin: 0 40px;
-  text-align: center;
+  color: #fff;
   text-decoration: none;
-  display: inline-block;
-  opacity: 0.85;
+  text-align: center;
+  background-color: #007bff;
+  opacity: .85;
 }
 
 #home-btn:hover {
   background-color: #0056b3;
 }
 
-.html-width{
-  max-width: 768px;
-  margin: 40px;
-}
-
-#tag_table{
+#tag_table {
   border-collapse: collapse;
 }
 
-#tag_table_tr{
-  background-color:#d3d3d3;
+#tag_table_tr {
+  background-color: #d3d3d3;
 }
 
 th, td {
-  border: 1px solid black;
-  border-collapse: separate;
   padding: 2px;
   height: 24px;
   min-width: 26px;
+  border: 1px solid black;
+  border-collapse: separate;
 }
