--- a/make_a_deal/make_a_deal.css
+++ b/make_a_deal/make_a_deal.css
@@ -16,21 +16,13 @@ header {
   text-align: center;
 }
 
-a:link {
-  color: #007bff;
-}
+a:link { color: #007bff; }
 
-a:visited {
-  color: #541BC4;
-}
+a:visited { color: #541BC4; }
 
-a:hover {
-  color: #0056b3;
-}
+a:hover { color: #0056b3; }
 
-nav a {
-  text-decoration: none;
-}
+nav a { text-decoration: none; }
 
 #home-btn:link, #home-btn:visited {
   display: inline-block;
@@ -43,9 +35,9 @@ nav a {
   opacity: .85;
 }
 
-#home-btn:hover {
-  background-color: #0056b3;
-}
+#home-btn:hover { background-color: #0056b3; }
+
+section { margin: 40px; }
 
 iframe {
   margin: 40px;
@@ -55,8 +47,4 @@ iframe {
 .block-mr {
   display: inline-block;
   margin: 0 40px;
-}
-
-section {
-  margin: 40px;
 }
