--- a/table/table.css
+++ b/table/table.css
@@ -15,17 +15,11 @@ header {
   margin: 40px;
 }
 
-a:link {
-  color: #007bff;
-}
+a:link { color: #007bff; }
 
-a:visited {
-  color: #541BC4;
-}
+a:visited { color: #541BC4; }
 
-a:hover {
-  color: #0056b3;
-}
+a:hover { color: #0056b3; }
 
 nav a {
   text-decoration: none;
@@ -65,6 +59,4 @@ th, td {
   opacity: .85;
 }
 
-#home-btn:hover {
-  background-color: #0056b3;
-}
+#home-btn:hover { background-color: #0056b3; }
