--- a/html_structure/html_structure.css
+++ b/html_structure/html_structure.css
@@ -15,57 +15,31 @@ header {
   max-width: 768px;
 }
 
-a:link {
-  color: #007bff;
-}
+a:link { color: #007bff; }
 
-a:visited {
-  color: #541BC4;
-}
+a:visited { color: #541BC4; }
 
-a:hover {
-  color: #0056b3;
-}
+a:hover { color: #0056b3; }
 
-nav a {
-  text-decoration: none;
-}
+nav a { text-decoration: none; }
 
-.no-border {
-  border: 0px;
-}
+.no-border { border: 0px; }
 
-.border1 {
-  border: 1px solid grey;
-}
+.border1 { border: 1px solid grey; }
 
-.border2 {
-  border: 2px dashed rgb(187, 187, 187);
-}
+.border2 { border: 2px dashed rgb(187, 187, 187); }
 
-.html-bk {
-  background-color: #fff0f0;
-}
+.html-bk { background-color: #fff0f0; }
 
-.body-bk, .head-bk {
-  background-color: #ddd;
-}
+.body-bk, .head-bk { background-color: #ddd; }
 
-.box-bk {
-  background-color: rgb(241, 241, 241);
-}
+.box-bk { background-color: rgb(241, 241, 241); }
 
-.cssborder-bk {
-  background-color: rgb(76, 175, 80);
-}
+.cssborder-bk { background-color: rgb(76, 175, 80); }
 
-.content-bk {
-  background-color: #FFF;
-}
+.content-bk { background-color: #fff; }
 
-.center {
-  text-align: center;
-}
+.center { text-align: center; }
 
 .element {
   padding: 5px;
@@ -82,9 +56,7 @@ nav a {
   margin: 15px 0;
 }
 
-.css-padding-pad {
-  margin: 2px 15px 15px;
-}
+.css-padding-pad { margin: 2px 15px 15px; }
 
 #home-btn:link, #home-btn:visited {
   display: inline-block;
@@ -97,6 +69,4 @@ nav a {
   opacity: .85;
 }
 
-#home-btn:hover {
-  background-color: #0056b3;
-}
+#home-btn:hover { background-color: #0056b3; }
