--- a/icon/icon.css
+++ b/icon/icon.css
@@ -11,7 +11,6 @@ body {
 
 header {
   padding: 6px;
-  padding-bottom: 5px;
   letter-spacing: 2px;
   text-align: right;
   background-color: #fff;
@@ -30,62 +29,65 @@ section {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  max-width: 1080px;
+  width: 80%;
   margin: 40px auto;
 }
 
 .col {
   float: left;
-  width: 12.5%;
-  margin-bottom: 40px;
+  width: 150px;
+  margin: 20px 0;
   border-radius: 4px;
 }
 
 .col:hover {
   background-color: #fff;
-  box-shadow: 0 0.25rem 0.125rem 0 rgba(0,0,0,.1);
+  box-shadow: 0 4px 4px rgba(0,0,0,.1);
 }
 
-.col-icon {
-  display: flex;
+.icon-top {
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  height: 80px;
-  padding: 8px;
+  height: 80px; */
+  padding: 12px 20px;
+  margin: auto;
   text-align: center;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
 
-.col-icon:hover {
+.icon-top:hover {
   color: #fff;
   background-color: #007bff;
 }
 
-.col-text {
-  width: 100%;
+.icon-text {
+  padding: 8px 12px;
   color: #adb5bd;
   font-size: 13px;
   text-align: center;
-  padding: 8px;
 }
 
-.col-text:hover {
+.icon-text:hover {
   color: #555;
 }
 
-
-@media screen and (max-width: 768px) {
-
-  section {
-    margin: 40px;
-  }
-
-  .col {
-    float: left;
-    width: 25%;
-    margin-bottom: 40px;
-    border-radius: 4px;
-  }
-
+#home-btn {
+position: relative;
+top: 50%;
+left: 50%;
+display: block;
+width: 100px;
 }
+
+#home-btn:link, #home-btn:visited {
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  background-color: #007bff;
+  opacity: .85;
+}
+
+#home-btn:hover { background-color: #0056b3; }
