--- a/form/form.css
+++ b/form/form.css
@@ -13,6 +13,7 @@ header {
 .html-wd {
   max-width: 768px;
   margin: auto;
+  margin-top: 40px;
   background-color: #f5f5f5;
 }
 
@@ -26,6 +27,7 @@ nav a { text-decoration: none; }
 
 div > h3 {
   padding: 10px;
+  margin: 0;
   color: #fff;
   background-color: #0275d8;
 }
@@ -64,4 +66,4 @@ label {
 
 #sub-btn:hover { background-color: #0056b3; }
 
-.form-option { padding-left: 20px; }
+.form-option { padding: 20px; }
