--- a/wizard_page/wizard_page.css
+++ b/wizard_page/wizard_page.css
@@ -105,8 +105,8 @@ hr {
 
 input {
   width: 100%;
-  padding: 12px 0 4px 0;
-  padding-bottom: 4px;
+  padding-top: 12px;
+  padding-bottom: 8px;
   font-size: 16px;
   font-family: Arial, "Microsoft JhengHei";
   border: none;
