--- a/bootstrap_showcase/css/bootstrap_index.css
+++ b/bootstrap_showcase/css/bootstrap_index.css
@@ -23,10 +23,15 @@ nav > a:hover { color: #0056b3; }
 
 nav a { text-decoration: none; }
 
+.bd-toc {
+  padding: .25rem 1.5rem;
+  font-size: 110%;
+  font-weight: 600;
+}
+
 .bd-sidebar .nav>li>a {
   display: block;
   padding: .25rem 1.5rem;
-  font-size: 90%;
   color: rgba(0,0,0,.65);
 }
 
@@ -34,4 +39,10 @@ nav a { text-decoration: none; }
   font-weight: 600;
   color: rgba(0,0,0,.85);
   background-color: transparent;
+}
+
+.bd-example {
+  position: relative;
+  padding: 1rem;
+  margin: 1rem -15px 0;
 }
