--- a/bootstrap_showcase/css/bootstrap_index.css
+++ b/bootstrap_showcase/css/bootstrap_index.css
@@ -51,3 +51,18 @@ nav a { text-decoration: none; }
   position: static;
   display: block;
 }
+
+.bd-example-row .row > [class^=col-] {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  background-color: rgba(86,61,124,.15);
+  border: 1px solid rgba(86,61,124,.2);
+}
+
+.bd-example-row .row + .row {
+  margin-top: 1rem;
+}
+
+.bd-example-tabs .nav-tabs {
+  margin-bottom: 1rem;
+}
