--- a/bootstrap_showcase/css/bootstrap_index.css
+++ b/bootstrap_showcase/css/bootstrap_index.css
@@ -29,6 +29,16 @@ nav a { text-decoration: none; }
   font-weight: 600;
 }
 
+.bd-toc-link {
+  display: block;
+  font-weight: 600;
+  color: #000;
+}
+
+.bd-toc-link:hover {
+  text-decoration: none;
+}
+
 .bd-sidebar .nav > li > a {
   display: block;
   padding: .25rem 1.5rem;
@@ -66,3 +76,17 @@ nav a { text-decoration: none; }
 .bd-example-tabs .nav-tabs {
   margin-bottom: 1rem;
 }
+
+.scrollspy-example {
+  position: relative;
+  height: 200px;
+  margin-top: .5rem;
+  overflow: auto;
+}
+
+.scrollspy-example-2 {
+  position: relative;
+  height: 350px;
+  overflow: auto;
+}
+
